# tutor-stuff

./: .gitignore  first_algorithmical_formula.txt  report.docx  Контрольная работа.doc
eight/: main.cpp
fifth/: main.cpp
fourth/: main.cpp
kresov/: first.txt  report27.doc  report27.docx  report28.doc  report28.docx  tasks.docx  ~$tasks.docx
kresov/variant27/eight/: main.cpp
kresov/variant27/fifth/: CMakeLists.txt  main.cpp
kresov/variant27/fourth/: main.cpp
kresov/variant27/second/: CMakeLists.txt  main.cpp
kresov/variant27/seventh/: CMakeLists.txt  main.cpp
kresov/variant28/: first.txt
litvinenko/: first_algorithmical_formula.txt  report.doc  report.docx
litvinenko/eight/: CMakeLists.txt  main.cpp
litvinenko/fifth/: main.cpp
litvinenko/fourth/: main.cpp
litvinenko/second/: main.cpp
litvinenko/seventh/: main.cpp
litvinenko/sixth/: main.cpp
litvinenko/third/: CMakeLists.txt  main.cpp
novikov/: report.docx  Контрольная работа (исправленная).docx
novikov/eight/: main.cpp  result.txt
novikov/fifth/: main.cpp
novikov/fourth/: main.cpp  result.txt
novikov/second/: CMakeLists.txt  main.cpp
novikov/seventh/: main.cpp
novikov/sixth/: main.cpp
novikov/third/: CMakeLists.txt  main.cpp
second/: main.cpp
seventh/: main.cpp
simonov/: first.txt  report.doc  report.docx
simonov/eight/: main.cpp
simonov/fifth/: main.cpp
simonov/fourth/: CMakeLists.txt  main.cpp
simonov/second/: main.cpp
simonov/seventh/: main.cpp
simonov/sixth/: main.cpp
simonov/third/: main.cpp
sixth/: CMakeLists.txt  main.cpp
third/: main.cpp
(+11 files in other folders)
